--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "felece",
+  "name": "medicalstok",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,15 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.13.6",
-    "core-js": "^3.15.1",
-    "nuxt": "^2.15.7",
-    "vuetify": "^2.5.5"
+    "@nuxtjs/axios": "^5.12.5",
+    "@nuxtjs/toast": "^3.3.1",
+    "core-js": "^3.8.2",
+    "nuxt": "^2.14.12"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.12.1"
+    "@nuxtjs/vuetify": "^1.11.3",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1"
   }
 }
