--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -14,7 +14,7 @@
 	<name>felece_case</name>
 	<description>Felece Case</description>
 	<properties>
-		<java.version>16</java.version>
+		<java.version>8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -82,6 +82,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>spring-boot-nuxt</finalName>
 	</build>
 
 </project>
