--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,26 @@
 version: '3.1'
 
 services:
-
   db:
     image: mongo
     restart: always
+    container_name: "db"
     ports:
       - 27017:27017
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: Enes123.
+
   backend:
     build: ./backend
     container_name: backend
     ports:
       - "8080:8080"
-    environment:
-      spring.datasource.url: "jdbc:postgresql://db:5432/sampledb"
+    links:
+      - db
     depends_on:
       - db
+      
   frontend:
     build: ./frontend
     container_name: frontend
